# superpayment

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/src/: manage.py
backend/src/api/config/: settings.py  urls.py
backend/src/api/vouchers/: admin.py  apps.py  urls.py  views.py
backend/src/tests/vouchers/: test_api.py
backend/vouchers/: models.py
backend/vouchers/migrations/: 0001_initial.py
host/: index.html  package-lock.json  package.json  vite.config.js
prestashop/: inject-widget.sh
widget/: Dockerfile  package-lock.json  package.json  vite.config.js
widget/public/: widget.html
widget/public/css/: modal.css  widget.css
widget/public/js/: main.js  modal.js  widget_manager.js
widget/tests/: modal.test.js  widget_manager.test.js
